tests/error/comptime_expr_errors/no_args.err
Error: Invalid comptime expression (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     return comptime()
  |            ^^^^^^^^^^ Comptime expression requires an argument

Guppy compilation failed due to 1 previous error
